force-app/main/default/objects/Plan__c/fields/Business_Improvement_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Business_Improvement_Proposition__c</fullName>
    <label>Business Improvement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>