force-app/main/default/objects/Plan__c/fields/Community_Sport_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Community_Sport_Proposition__c</fullName>
    <label>Community Sport</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>