force-app/main/default/objects/Plan__c/fields/Events_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Events_Proposition__c</fullName>
    <label>Events</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>