force-app/main/default/objects/Plan__c/fields/Facilities_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Facilities_Proposition__c</fullName>
    <label>Facilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>