force-app/main/default/objects/Plan__c/fields/High_Performance_Proposition__c.field-meta.xml
<CustomField>
    <fullName>High_Performance_Proposition__c</fullName>
    <label>High Performance</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>