force-app/main/default/objects/Plan__c/fields/Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Investment_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investment Area</label>
    <referenceTo>Investment_Area__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>