force-app/main/default/objects/Plan__c/fields/P_Name__c.field-meta.xml
<CustomField>
    <fullName>P_Name__c</fullName>
    <formula>if(RecordType.Name = &quot;Partner Plan&quot;,

Partner__r.Name &amp; &quot; - &quot; &amp; 

if(year(Start_Date__c) = year(End_Date__c), text(year(Start_Date__c)), text(year(Start_Date__c)) &amp; &quot;/&quot; &amp; right(text(year(End_Date__c)),2)),

Project_Name__c &amp; &quot; - &quot; &amp; 

if(year(Start_Date__c) = year(End_Date__c), text(year(Start_Date__c)), text(year(Start_Date__c)) &amp; &quot;/&quot; &amp; right(text(year(End_Date__c)),2)))</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>