force-app/main/default/objects/Plan__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Partner_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>