force-app/main/default/objects/Plan__c/fields/Partner_Mission_Statement__c.field-meta.xml
<CustomField>
    <fullName>Partner_Mission_Statement__c</fullName>
    <label>Partner Mission Statement</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>