force-app/main/default/objects/Plan__c/fields/Partner_Plan__c.field-meta.xml
<CustomField>
    <fullName>Partner_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Plan</label>
    <type>Checkbox</type>
</CustomField>