force-app/main/default/objects/Plan__c/fields/Plan_Name_for_search__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name_for_search__c</fullName>
    <label>Plan Name (for search)</label>
    <length>120</length>
    <type>Text</type>
</CustomField>