force-app/main/default/objects/Plan__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <inlineHelpText>Enter a description of the Project.  Include links to relevant documents in KC/KS.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>