force-app/main/default/objects/Plan__c/fields/Summary_Partner_Plan__c.field-meta.xml
<CustomField>
    <fullName>Summary_Partner_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Summary Partner Plan</label>
    <type>Checkbox</type>
</CustomField>