force-app/main/default/objects/Plan__c/recordTypes/Bundled_Plan.recordType-meta.xml
<RecordType>
    <fullName>Bundled_Plan</fullName>
    <active>true</active>
    <description>Used for grouping initiatives for non-targeted Partners, contestable investments, programmes, and supplier contracts</description>
    <label>Project Plan</label>
</RecordType>