force-app/main/default/objects/Plan__c/recordTypes/Partner_Plan.recordType-meta.xml
<RecordType>
    <fullName>Partner_Plan</fullName>
    <active>true</active>
    <description>For engagement and investment planning with organisations that Sport NZ Group targets</description>
    <label>Partner Plan</label>
</RecordType>