force-app/main/default/objects/Plan__c/validationRules/StatusToBeSetByOnlyAdmins.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusToBeSetByOnlyAdmins</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT($User.Profile_Name__c = &apos;System Administrator&apos;) , ISPICKVAL( Status__c , &apos;Non-compliant&apos;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You are not allowed to change status to Non-compliant. Please contact your System Administrator.</errorMessage>
</ValidationRule>