force-app/main/default/objects/Plan__c/listViews/All_Partner_Plans.listView-meta.xml
<ListView>
    <fullName>All_Partner_Plans</fullName>
    <columns>NAME</columns>
    <columns>P_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Partner__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Plan__c.Partner_Plan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Current Partner Plans (Draft and Active)</label>
</ListView>