force-app/main/default/objects/Plan__c/listViews/Closed_Plans.listView-meta.xml
<ListView>
    <fullName>Closed_Plans</fullName>
    <columns>NAME</columns>
    <columns>P_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Partner__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Investment_Area__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>Closed Plans</label>
</ListView>