force-app/main/default/objects/Plan__c/listViews/My_Plans.listView-meta.xml
<ListView>
    <fullName>My_Plans</fullName>
    <columns>NAME</columns>
    <columns>P_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Partner__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Investment_Area__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Plans</label>
</ListView>