force-app/main/default/objects/Plan__c/listViews/PRM_Imported_Plans.listView-meta.xml
<ListView>
    <fullName>PRM_Imported_Plans</fullName>
    <columns>NAME</columns>
    <columns>P_Name__c</columns>
    <columns>Partner__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>P_Name__c</field>
        <operation>startsWith</operation>
        <value>PRM</value>
    </filters>
    <label>PRM Imported Plans</label>
</ListView>